[package]
name = "ruruby-parse"
version = "0.0.1"
authors = ["monochrome <sisshiki@mac.com>"]
edition = "2018"
description = "Ruby parser written with Rust."
repository = "https://github.com/sisshiki1969/ruruby_parse"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
once_cell = "1.20.2"
enum-iterator = "2.1.0"
num = "0.4"
num-bigint = "0.4.2"
console = "0.15.0"
clap = { version = "4.5.23", features = ["derive", "cargo"] }
reqwest = { version = "0.12.9", features = ["blocking"] }